* 10-Jul-2012: version 0.2.7:
    - Added classes MysqlSqlStatementFactory, PgsqlSqlStatementFactory and SqliteSqlStatementFactory
    
* 17-Jan-2012: version 0.2.6:
    - SqlStatementFactory now uses Ddth_EhProperties_EhProperties instead of Ddth_Commons_Properties

* 12-Sep-2011: version 0.2.5:
    - Added function getNumAffectedRows($conn) to class SqlStatement

* 18-Jun-2011: version 0.2.4:
    - Added classes ParamAsIs

* 30-May-2011: version 0.2.3:
    - Added classes AbstractSqlStatementDao

* 17-Jan-2011: version 0.2.2:
    - Added Sqlite support
    - Added classes SqlStatement & SqlStatementFactory; and sub-classes of SqlStatement

* 27-Dec-2010: version 0.2.1:
    - Now use PHP-style configurations (removed .properties file-based config)
    - Re-implemented sub-package Adodb
    - Added sub-packages Mysql and Pgsql

* 04-April-2008: version 0.2
    - Added interfaces: IDao, IDaoFactory
    - Removed sub-package Adodb, interface IBusinessObject and IBoManager
    - Minor enhancements, and update of copyright & license

* 11-Mar-2008: version 0.1 (initial version)